--- a/assets/css/dev/app.less
+++ b/assets/css/dev/app.less
@@ -1,17 +1,4 @@
 @charset "UTF-8";
 @import "common";
-@import "minx";
-
-main(){
-
-  mobile({
-
-
-
- });
-
- pc({
-
-
- });
-}
+@import "componetns";
+@import "themes/_themes";
