--- a/assets/css/dev/common.less
+++ b/assets/css/dev/common.less
@@ -1,1 +1,12 @@
 @charset "UTF-8";
+@import "common/global";
+@import "common/profile";
+@import "mixin";
+
+body,html{
+ .alpha(0);
+ .blurs(10px);
+  background-color: rgba(0,0,0,0);
+}
+
+
