--- a/assets/css/dev/common/profile.less
+++ b/assets/css/dev/common/profile.less
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@import "../mixin/functions";
+
+img,span,div,h1,h2,h3,h4,h5,h6,section,dt,thead,td,tr,html,body{
+  .clearfix();
+}
 
 a {
   text-decoration: none;
@@ -9,3 +14,6 @@ ul li{
   list-style: none;
 }
 
+section{
+  position: inherit;
+}
