--- a/assets/css/dev/themes/default/dsp.less
+++ b/assets/css/dev/themes/default/dsp.less
@@ -4,7 +4,24 @@
 @import "web/_web";
 
 .dsp(@pc:true,@mobile:true){
+
+  body{
+    .alpha(1);
+    background-color: rgba(0,0,0,.1);
+    background-image: url(@bg-image);
+  }
+
+  .header{
+    .full();
+    .blurs(30px);
+  }
+
+  .container-box{
+    .full();
+    padding:0 5px 0 5px;
+  }
   ._mobile(@pc);
   ._web(@mobile);
+
 }
 
