--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,57 +1,1 @@
-@charset "UTF-8";
-body,
-html {
-  width: 100%;
-  height: auto;
-  min-height: 100%;
-  padding: 0;
-  margin: 0 auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-a {
-  text-decoration: none;
-  color: #ffffff;
-}
-ul li {
-  list-style: none;
-}
-body,
-html {
-  filter: alpha(opacity=0);
-  -o-Opacity: 0;
-  -m-Opacity: 0;
-  -ms-Opacity: 0;
-  -moz-Opacity: 0;
-  -khtml-Opacity: 0;
-  -webkit-Opacity: 0;
-  Opacity: 0;
-  -o-filter: blur(10px);
-  -m-filter: blur(10px);
-  -ms-filter: blur(10px);
-  -moz-filter: blur(10px);
-  -khtml-filter: blur(10px);
-  -webkit-filter: blur(10px);
-  filter: blur(10px);
-  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=10px, MakeShadow=false);
-  background-color: rgba(0, 0, 0, 0);
-}
-nav,
-.nav {
-  min-height: 50px;
-}
-@media screen and (min-width: 931px) {
-  .nav {
-    min-height: 60px;
-  }
-}
-nav,
-.nav {
-  min-height: 50px;
-}
-@media screen and (max-width: 930px) {
-  .nav {
-    min-height: 40px;
-  }
-}
+@charset "UTF-8";#root,.container{height:auto;min-height:100%;width:100%}body,html{padding:0;margin:0 auto;top:0;left:0}#root{position:absolute}#scripts-area{display:none}#debug-area{width:100%;height:0;padding:10px}.container-box,.header{width:100%;height:100%}body,div,dt,h1,h2,h3,h4,h5,h6,html,img,section,span,td,thead,tr{zoom:1}body:before,div:before,dt:before,h1:before,h2:before,h3:before,h4:before,h5:before,h6:before,html:before,img:before,section:before,span:before,td:before,thead:before,tr:before{content:'';display:block}body:after,div:after,dt:after,h1:after,h2:after,h3:after,h4:after,h5:after,h6:after,html:after,img:after,section:after,span:after,td:after,thead:after,tr:after{content:'';display:table;clear:both}a{text-decoration:none;color:#fff}ul li{list-style:none}section{position:inherit}#debug-area[class=active]{display:block}@media screen and (min-width:931px){.nav{min-height:60px}}.nav,nav{min-height:50px}@media screen and (max-width:930px){.nav{min-height:40px}}body{filter:alpha(opacity=1);-o-Opacity:1;-m-Opacity:1;-ms-Opacity:1;-moz-Opacity:1;-khtml-Opacity:1;-webkit-Opacity:1;Opacity:1;background-color:rgba(0,0,0,.1);background-image:url(../images/v1/BANNER.jpg)}.header{-o-filter:blur(30px);-m-filter:blur(30px);-ms-filter:blur(30px);-moz-filter:blur(30px);-khtml-filter:blur(30px);-webkit-filter:blur(30px);filter:blur(30px);filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius=30px, MakeShadow=false)}.container-box{padding:0 5px}
