js framework make

--- a/assets/css/dev/common/global.less
+++ b/assets/css/dev/common/global.less
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "../mixin/functions";
 
 body,html{
   padding: 0;
@@ -27,6 +28,45 @@ body,html{
  padding: 10px;
 }
 
+.area-wrap{
+  .container;
+}
 
+.area-flex-wrap{
+  .container;
+  .flex-display();
+}
 
+footer{
+  width: 100%;
+  height: auto;
+  padding-bottom:10px;
+}
 
+.yellow{
+  background-color: yellow;
+}
+
+.red{
+  background-color: red;
+}
+
+.blue{
+  background-color: blue;
+}
+
+.green{
+  background-color: green;
+}
+
+.white{
+  background-color: white;
+}
+
+.black{
+  background-color: black;
+}
+
+.pink{
+  background-color: pink;
+}
