--- a/assets/css/dev/themes/default/_common.less
+++ b/assets/css/dev/themes/default/_common.less
@@ -10,17 +10,23 @@
 
   .header{
     .full();
-    .blurs(30px);
   }
+
 
   .container-box{
     .full();
-    padding:0 5px 0 5px;
   }
 
   .theme-simple-one{
      background-color: rgba(0,0,0,.6);
   }
 
+  .theme-alpha{
+    background-color:rgba(0,0,0,0);
+  }
+
+  .no-scrollbar('html');
+  .no-scrollbar(div);
 
 }
+
