--- a/assets/css/dev/mixin/functions.less
+++ b/assets/css/dev/mixin/functions.less
@@ -44,3 +44,213 @@
     clear:both;
   }
 }
+
+// 透明 bar scroll
+.no-scrollbar(@element){
+
+  .i(@element)when(iskeyword(@element)=false){
+    ::-webkit-scrollbar{
+      display: none;
+      width: 0;
+      .alpha(0);
+    }
+  }
+
+  .a(@element)when(iskeyword(@element)=true){
+   @{element}{
+    -webkit-scrollbar{
+      display: none;
+      width: 0;
+      .alpha(0);
+     }
+   }
+  }
+  .i(@element);
+  .a(@element);
+
+}
+
+// display
+
+.flex-display(@display: flex) {
+  display: ~"-webkit-@{display}";
+  display: ~"-moz-@{display}";
+  display: @display;
+}
+
+
+// Import font
+// -------------------------
+.font-face(@fontFamily, @fileName, @style, @weight) {
+  @font-face{
+    font-family:@fontFamily;
+    font-style:@style;
+    font-weight:@weight;
+    src:url('@{fileName}.eot');
+    src:local('@fontFamily'), url('@{fileName}.eot?#iefix') format('embedded-opentype'), url('@{fileName}.woff') format('woff'), url('@{fileName}.ttf') format('truetype'), url('@{fileName}.svg#@{fontFamily}') format('svg'), url("@{fileName}.otf") format('opentype');
+  }
+}
+
+
+// Gradient
+// -------------------------
+.gradient(@start: #000000, @stop: #FFFFFF) {
+  background:(@start + @stop)/2;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0, @start), color-stop(1, @stop));
+  background:-moz-linear-gradient(center top, @start 0%, @stop 100%);
+}
+
+// Box shadow
+// -------------------------
+.drop-shadow(@horizontal: 0, @vertical: 1px, @blur: 2px, @alpha: 0.1) {
+  -webkit-box-shadow:@horizontal @vertical  @blur rgba(0, 0, 0, @alpha);
+  -moz-box-shadow:@horizontal @vertical  @blur rgba(0, 0, 0, @alpha);
+  box-shadow:@horizontal @vertical  @blur rgba(0, 0, 0, @alpha);
+}
+
+// Box shadow inset
+// -------------------------
+.inner-shadow(@horizontal: 0, @vertical: 1px, @blur: 2px, @alpha: 0.4) {
+  -webkit-box-shadow:inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
+  -moz-box-shadow:inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
+  box-shadow:inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
+}
+
+// Box inner border
+// -------------------------
+.inner-border(@width: 1px, @color: #000) {
+  -webkit-box-shadow:inset 0 0 0 @width @color;
+  -moz-box-shadow:inset 0 0 0 @width @color;
+  box-shadow:inset 0 0 0 @width @color;
+}
+
+// Box shadow default
+// -------------------------
+.box-shadow(@arguments) {
+  -webkit-box-shadow:@arguments;
+  -moz-box-shadow:@arguments;
+  box-shadow:@arguments;
+}
+
+// Animation
+// -------------------------
+.animation(@animation) {
+  -webkit-animation:@animation;
+  -moz-animation:@animation;
+  animation:@animation;
+}
+
+.transition(@transition) {
+  -webkit-transition:@transition;
+  -moz-transition:@transition;
+  -o-transition:@transition;
+  transition:@transition;
+}
+.transition-delay(@transition-delay) {
+  -webkit-transition-delay:@transition-delay;
+  -moz-transition-delay:@transition-delay;
+  -o-transition-delay:@transition-delay;
+  transition-delay:@transition-delay;
+}
+.transition-duration(@transition-duration) {
+  -webkit-transition-duration:@transition-duration;
+  -moz-transition-duration:@transition-duration;
+  -o-transition-duration:@transition-duration;
+  transition-duration:@transition-duration;
+}
+
+// Transform
+// -------------------------
+.transform(@arguments) {
+  -webkit-transform:@arguments;
+  -moz-transform:@arguments;
+  transform:@arguments;
+}
+
+// Transform rotation
+// -------------------------
+.rotation(@deg:5deg) {
+  -webkit-transform:rotate(@deg);
+  -moz-transform:rotate(@deg);
+  transform:rotate(@deg);
+}
+
+// Transform scale
+// -------------------------
+.scale(@ratio:1.5) {
+  -webkit-transform:scale(@ratio);
+  -moz-transform:scale(@ratio);
+  transform:scale(@ratio);
+}
+
+// Translate
+// -------------------------
+.translate(@x:0, @y:0) {
+  -moz-transform:translate(@x, @y);
+  -webkit-transform:translate(@x, @y);
+  -o-transform:translate(@x, @y);
+  -ms-transform:translate(@x, @y);
+  transform:translate(@x, @y);
+}
+
+// Translate3d
+// -------------------------
+.translate3d(@x, @y, @z) {
+  -webkit-transform:translate3d(@x, @y, @z);
+  -moz-transform:translate3d(@x, @y, @z);
+  -o-transform:translate3d(@x, @y, @z);
+  transform:translate3d(@x, @y, @z);
+}
+
+.rounded(@radius: 3px) {
+  -webkit-border-radius:@radius;
+  -moz-border-radius:@radius;
+  border-radius:@radius;
+  -webkit-background-clip:padding-box;
+  -moz-background-clip:padding-box;
+  background-clip:padding-box;
+}
+
+// Border radius with different arguments
+// -------------------------
+.border-radius(@topleft: 0, @topright: 0, @bottomright: 0, @bottomleft: 0) {
+  -webkit-border-top-left-radius:@topleft;
+  -webkit-border-top-right-radius:@topright;
+  -webkit-border-bottom-right-radius:@bottomright;
+  -webkit-border-bottom-left-radius:@bottomleft;
+  -moz-border-radius-topleft:@topleft;
+  -moz-border-radius-topright:@topright;
+  -moz-border-radius-bottomright:@bottomright;
+  -moz-border-radius-bottomleft:@bottomleft;
+  border-top-left-radius:@topleft;
+  border-top-right-radius:@topright;
+  border-bottom-right-radius:@bottomright;
+  border-bottom-left-radius:@bottomleft;
+  -webkit-background-clip:padding-box;
+  -moz-background-clip:padding-box;
+  background-clip:padding-box;
+}
+
+// Background size
+// -------------------------
+.background-size(@size) {
+  -webkit-background-size:@size;
+  -moz-background-size:@size;
+  -o-background-size:@size;
+  background-size:@size;
+}
+
+// Opacity
+// -------------------------
+.opacity(@opacity) {
+  opacity:@opacity;
+  @opacityIE : @opacity * 100;
+  filter:~"alpha(opacity=@{opacityIE})";
+}
+
+// Appearance
+// -------------------------
+.appearance(@appearance:none) {
+  -webkit-appearance:@appearance;
+  appearance:@appearance;
+}
