--- a/assets/css/dev/common/global.less
+++ b/assets/css/dev/common/global.less
@@ -37,36 +37,79 @@ body,html{
   .flex-display();
 }
 
-footer{
+.full-width{
   width: 100%;
   height: auto;
+}
+
+.line {
+   width: 100%;
+}
+
+.text{
+   font-size:16px;
+}
+
+.align-center{
+  text-align: center;
+}
+
+.center-box{
+  display: block;
+  margin: 0 auto;
+}
+
+footer{
+  .full-width;
   padding-bottom:10px;
 }
 
 .yellow{
   background-color: yellow;
 }
+.font-yellow{
+  color: yellow;
+}
 
 .red{
   background-color: red;
+}
+.font-red{
+  color: red;
 }
 
 .blue{
   background-color: blue;
 }
+.font-blue{
+  color: blue;
+}
+
 
 .green{
   background-color: green;
+}
+.font-green{
+  color: green;
 }
 
 .white{
   background-color: white;
 }
+.font-white{
+  color: white;
+}
 
 .black{
   background-color: black;
 }
+.font-black{
+  color: black;
+}
 
 .pink{
   background-color: pink;
+}
+.font-pink{
+  color: pink;
 }
