--- a/assets/css/dev/config.less
+++ b/assets/css/dev/config.less
@@ -12,8 +12,10 @@
   @yel:yellow;
 
 // size
-  @media_size : 930px;
+  @media_size : 1108px; // 930px
   @pc_size:931px;
+  @root_font_size:16;
+  @Root_Font_Size: @root_font_size px;
   @mobile_size:@media_size;
 
 // data path
@@ -23,3 +25,4 @@
 
 // src images
   @bg-image:"@{app_image_v1}/BANNER.jpg";
+  @logo-image :"@{app_image_v1}/logo+font_420X95.png";
