--- a/assets/css/dev/common/profile.less
+++ b/assets/css/dev/common/profile.less
@@ -7,7 +7,7 @@ img.ul,li,ol,span,div,h1,h2,h3,h4,h5,h6,section,dt,thead,td,tr,html,body{
   padding: 0;
 }
 
-ul, menu, dir {
+ul, menu, dir,p {
   display: block;
   list-style-type: none;
   .prefix(margin-before, 0);
