--- a/assets/css/dev/config.less
+++ b/assets/css/dev/config.less
@@ -26,3 +26,6 @@
 // src images
   @bg-image:"@{app_image_v1}/BANNER.jpg";
   @logo-image :"@{app_image_v1}/logo+font_420X95.png";
+
+// theme
+  @choose_theme : dsp;
