--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 @import "dev/app";
-.dsp();
+
+.install_theme(@theme:@choose_theme)when(@theme=dsp){
+    .dsp();
+}
+
+.install_theme(@theme:@choose_theme)when(@theme=def){
+    //.def();
+}
