--- a/assets/css/dev/mixin/functions.less
+++ b/assets/css/dev/mixin/functions.less
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import "prefix";
+@import "functions/filter";
+
 // 空
 .null(){
   /**[空调用 空规则]**/
@@ -16,12 +18,7 @@
   .prefix(Opacity,@value);
 }
 
-// 毛玻璃效果 兼容
-.blurs(@value:10px)when (ispixel(@value)){
-  .prefix(filter,blur(@value));
-  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=@value, MakeShadow=false);
-  // IE6~IE9
-}
+
 
 // 全
 
