--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,10 +1,4 @@
 @charset "UTF-8";
 @import "dev/app";
 
-.install_theme(@theme:@choose_theme)when(@theme=dsp){
-    .dsp();
-}
-
-.install_theme(@theme:@choose_theme)when(@theme=def){
-    //.def();
-}
+.install_theme(dsp);
