--- a/assets/css/dev/themes/default/_common.less
+++ b/assets/css/dev/themes/default/_common.less
@@ -23,6 +23,7 @@
   .container-box{
     .full();
   }
+
   .wrap-image{
     width: 100%;
     min-width: 99%;
@@ -46,6 +47,7 @@
      max-height:100%;
      height:auto;
   }
+
   .logo{
      display: block;
      max-height: 100%;
@@ -65,7 +67,7 @@
      margin: 0 auto;
   }
   .copyright-box{
-    padding-top:5%;
+    padding-top:40px;
   }
 
   .copyright-master a:hover , .copyright-number a:hover{
@@ -79,6 +81,7 @@
     width: 100%;
     background-color: @daily-ad-info-bgcolor;
   }
+
   .no-scrollbar('html');
   .no-scrollbar(div);
 
