--- a/assets/css/dev/common/profile.less
+++ b/assets/css/dev/common/profile.less
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import "../mixin/functions";
 
-img.ul,li,ol,span,div,h1,h2,h3,h4,h5,h6,section,dt,thead,td,tr,html,body{
+img,ul,li,ol,span,div,h1,h2,h3,h4,h5,h6,section,dt,thead,td,tr,html,body{
   .clearfix();
   margin: 0 auto;
   padding: 0;
