--- a/assets/css/dev/config.less
+++ b/assets/css/dev/config.less
@@ -26,6 +26,8 @@
 // src images
   @bg-image:"@{app_image_v1}/BANNER.jpg";
   @logo-image :"@{app_image_v1}/logo+font_420X95.png";
+  @username-input-image:"@{app_image_v1}/username-input.png";
+  @password-input-image:"@{app_image_v1}/password-input.png";
 
 // theme
   @choose_theme : dsp;
