--- a/assets/css/dev/common/global.less
+++ b/assets/css/dev/common/global.less
@@ -100,7 +100,6 @@ footer{
 .font-white{
   color: white;
 }
-
 .black{
   background-color: black;
 }
@@ -151,4 +150,45 @@ footer{
 
 .btn{
   display: block;
+}
+
+.b-right,.b-left{
+  display: block;
+}
+.b-right,.inline-right{
+  float:right;
+}
+.b-left,.inline-left{
+  float: left;
+}
+.inline-right,.inline-left{
+  display: inline-block;
+}
+.r-left,.r-right,.r-top,.r-bottom{
+  .relative;
+}
+
+.r-left{
+  left: 0;
+}
+.r-right{
+  right: 0;
+}
+.r-top{
+  top:0;
+}
+.r-bottom{
+  bottom:0;
+}
+.fixed{
+ position: fixed;
+}
+.static{
+  position: static;
+}
+.absolute{
+  position: absolute;
+}
+.relative{
+  position: relative;
 }
