--- a/assets/css/dev/themes/default/_common.less
+++ b/assets/css/dev/themes/default/_common.less
@@ -185,6 +185,22 @@
     background-image: url(@password-input-image);
     background-size: cover;
   }
+  .small-tip{
+    display: block;
+    max-width: 200px;
+    min-width: 0;
+    min-height: 20px;
+    max-height: 50px;
+    width: auto;
+    height: auto;
+    text-align: center;
+    padding: 0;
+    margin: 0 auto;
+  }
+  .area-box{
+    width: auto;
+    height: auto;
+  }
   .no-scrollbar('html');
   .no-scrollbar(div);
 }
