index.html update

--- a/assets/css/dev/common/global.less
+++ b/assets/css/dev/common/global.less
@@ -8,92 +8,74 @@ body,html{
   left: 0;
   font-size:@Root_Font_Size;
 }
-
 .container{
   width: 100%;
   height: auto;
   min-height: 100%;
 }
-
 #root{
   .container;
   position: absolute;
 }
-
 #scripts-area{
   display: none;
 }
-
 #debug-area{
  width: 100%;
  padding: 10px;
 }
-
 .area-wrap{
   .container;
 }
-
 .area-flex-wrap{
   .container;
   .flex-display();
 }
-
 .full-width{
   width: 100%;
   height: auto;
 }
-
 .line {
    width: 100%;
 }
-
 .text{
    font-size:16px;
 }
-
 .align-center{
   text-align: center;
 }
-
 .center-box{
   display: block;
   margin: 0 auto;
 }
-
 footer{
   .full-width;
   padding-bottom:10px;
 }
-
 .yellow{
   background-color: yellow;
 }
 .font-yellow{
   color: yellow;
 }
-
 .red{
   background-color: red;
 }
 .font-red{
   color: red;
 }
-
 .blue{
   background-color: blue;
 }
 .font-blue{
   color: blue;
 }
-
-
 .green{
   background-color: green;
 }
 .font-green{
   color: green;
 }
-
 .white{
   background-color: white;
 }
@@ -106,7 +88,6 @@ footer{
 .font-black{
   color: black;
 }
-
 .pink{
   background-color: pink;
 }
@@ -125,7 +106,6 @@ footer{
 .h3{
   font-size:30px;
 }
-
 .h4{
   font-size: 20px;
 }
@@ -147,11 +127,10 @@ footer{
 .h10{
   font-size: 8px;
 }
-
 .btn{
   display: block;
+  cursor: pointer;
 }
-
 .b-right,.b-left{
   display: block;
 }
@@ -167,7 +146,6 @@ footer{
 .r-left,.r-right,.r-top,.r-bottom{
   .relative;
 }
-
 .r-left{
   left: 0;
 }
