--- a/assets/css/dev/themes/default/_common.less
+++ b/assets/css/dev/themes/default/_common.less
@@ -47,49 +47,6 @@
      max-height:100%;
      height:auto;
   }
-
-  .logo{
-     display: block;
-     max-height: 100%;
-     min-height:50px;
-     height: auto;
-     width: 250px;
-   }
-
-  .nav-logo-img{
-    width: 250px;
-    height: 50px;
-  }
-
-  .copyright-master,.copyright-number{
-     width: auto;
-     display: inline-block;
-     margin: 0 auto;
-  }
-  .copyright-box{
-    padding-top:40px;
-  }
-
-  .copyright-master a:hover , .copyright-number a:hover{
-     color: @copyright-master-hover-color;
-  }
-
-  #daily-ad-info{
-    min-height: 363px;
-    max-height: 400px;
-    height: auto;
-    width: 100%;
-    background-color: @daily-ad-info-bgcolor;
-  }
-  #page-tools-area{
-    width:auto;
-    height:auto;
-    display: block;
-    position: fixed;
-    bottom: 10px;
-    right: 15px;
-    z-index: 1000;
-  }
   .theme-info-bgcolor{
      background-color:@theme-info-bgcolor;
   }
@@ -132,11 +89,71 @@
     text-align: center;
     margin-top: 10px;
   }
+
+  .theme-btn-submit:active{
+    width: 196px;
+    height: 31px;
+    padding: 2px 20px 2px 20px;
+    line-height: 31px;
+    font-size: 14px;
+    font-weight: normal;
+    box-shadow: 0;
+    border-color: rgba(0,0,0,0) !important;
+  }
+
   .theme-btn-submit:hover,.input:hover{
     box-shadow: 0 3px 3px #acd5e8;
     border-color: #e1e5ec !important;
-    font-size: 20px;
     font-weight: bold;
+  }
+  .theme-portrait{
+    min-width: 50px;
+    min-height: 50px;
+    height: 150px;
+    width: 150px;
+    border-radius: 90px;
+  }
+  .logo{
+    display: block;
+    max-height: 100%;
+    min-height:50px;
+    height: auto;
+    width: 250px;
+  }
+
+  .nav-logo-img{
+    width: 250px;
+    height: 50px;
+  }
+
+  .copyright-master,.copyright-number{
+    width: auto;
+    display: inline-block;
+    margin: 0 auto;
+  }
+  .copyright-box{
+    padding-top:40px;
+  }
+
+  .copyright-master a:hover , .copyright-number a:hover{
+    color: @copyright-master-hover-color;
+  }
+
+  #daily-ad-info{
+    min-height: 363px;
+    max-height: 400px;
+    height: auto;
+    width: 100%;
+    background-color: @daily-ad-info-bgcolor;
+  }
+  #page-tools-area{
+    width:auto;
+    height:auto;
+    display: block;
+    position: fixed;
+    bottom: 10px;
+    right: 15px;
+    z-index: 1000;
   }
   .input{
     width: 200px;
@@ -150,13 +167,7 @@
     text-align: center;
     margin-top: 10px;
   }
-  .theme-portrait{
-     min-width: 50px;
-     min-height: 50px;
-     height: 150px;
-     width: 150px;
-     border-radius: 90px;
-  }
+
   .unable{
     background-color: @unable-bgcolor;
   }
@@ -169,7 +180,7 @@
      width: 90%;
      max-height: 300px;
      height: auto;
-     padding: 20px 0 20px 0;
+     padding: 60px 0 20px 0;
      margin: 0 auto;
      margin-bottom: 20px;
   }
@@ -199,6 +210,8 @@
     background-image: url(@password-input-image);
     background-size: cover;
   }
+
+
   .no-scrollbar('html');
   .no-scrollbar(div);
 
