--- a/assets/css/dev/themes/default/mobile/_mobile.less
+++ b/assets/css/dev/themes/default/mobile/_mobile.less
@@ -70,5 +70,19 @@
     .theme-qrcode-size{
       width: 60%;
     }
+    .clock{
+      margin-bottom: 10px;
+    }
+  });
+
+  .MediaMaxQuery(390px,{
+    .big-word-tip,.concat-us-number{
+        font-size: 20px;
+    }
+
+    .clock-tip{
+      font-size: 18px;
+      letter-spacing:1px;
+    }
   });
 }
