--- a/assets/css/dev/themes/default/skin.less
+++ b/assets/css/dev/themes/default/skin.less
@@ -17,5 +17,9 @@
 @theme-header-item-bgcolor-2:@theme-header-item-bgcolor-1;
 
 @theme-source-bgcolor:white;
+@theme-source-mobile-color:rgb(235,235,235);
+@theme-source-platform-color:@theme-source-mobile-color;
+@theme-card-number-color:rgb(212,212,212);
+@theme-concat-us-number-color:rgb(22,178,139);
 
 @unable-bgcolor:#8c8c8c;
