--- a/assets/css/dev/config.less
+++ b/assets/css/dev/config.less
@@ -28,6 +28,7 @@
   @logo-image :"@{app_image_v1}/logo+font_420X95.png";
   @username-input-image:"@{app_image_v1}/username-input.png";
   @password-input-image:"@{app_image_v1}/password-input.png";
+  @clock-image:"@{app_image_v1}/clock.png";
 
 // theme
   @choose_theme : dsp;
