--- a/assets/css/dev/themes/default/_common.less
+++ b/assets/css/dev/themes/default/_common.less
@@ -190,7 +190,6 @@
      margin: 0 auto;
      margin-bottom: 20px;
   }
-
   .test-info:after{
     content: "";
     width: 100%;
@@ -226,7 +225,8 @@
     top: 12px;
     left: -10px;
     position: relative;
-    background-color:@theme-concat-us-number-color;
+    background-image: url(@clock-image);
+    background-size: cover;
   }
   .clock-tip{
     font-size:20px;
