--- a/assets/css/dev/themes/default/_common.less
+++ b/assets/css/dev/themes/default/_common.less
@@ -31,7 +31,6 @@
     min-height: 50%;
     max-width: 100%;
     height: auto;
-    display: block;
     margin: 0 auto;
   }
   .theme-simple-one,footer{
@@ -131,7 +130,9 @@
     width: 250px;
     height: 50px;
   }
-
+  .banner{
+    background-color: @theme-banner-bgcolor;
+  }
   .copyright-master,.copyright-number{
     width: auto;
     display: inline-block;
