--- a/assets/css/dev/themes/default/mobile/_mobile.less
+++ b/assets/css/dev/themes/default/mobile/_mobile.less
@@ -19,7 +19,12 @@
       height: auto;
       width: 100%;
     }
-
+    .wrap-image[class~="pc-on"]{
+      display: none;
+    }
+    .wrap-image[class~="mobile-on"]{
+      display:block;
+    }
 
   },@_size);
 
