--- a/assets/css/dev/themes/default/skin.less
+++ b/assets/css/dev/themes/default/skin.less
@@ -8,6 +8,7 @@
 @copyright-master-hover-color:yellow;
 @copyright-number-hover-color:@copyright-master-hover-color;
 
+@theme-banner-bgcolor:rgb(240,242,244);
 @theme-alpha:rgba(0,0,0,0);
 @theme-info-bgcolor:rgb(21,177,137);
 @theme-advantage-bgcolor:@theme-info-bgcolor;
