--- a/assets/css/dev/components/carousel/base.less
+++ b/assets/css/dev/components/carousel/base.less
@@ -82,13 +82,6 @@
     .alpha(1);
   }
 
-  .Carousel-item-tips{
-    display: none;
-    width:100%;
-    .em(min-height,10);
-    position: relative;
-  }
-
   .Carousel-item-tips[class~="on"],.Carousel-item-tips[class~="pc-on"]{
     display: block;
   }
@@ -98,6 +91,9 @@
   }
 
   .Carousel-item-tips{
+    display: none;
+    width:100%;
+    .em(min-height,10);
      max-width: 100%;
      max-height:100%;
      height: auto;
@@ -106,7 +102,8 @@
      z-index: 1000;
      left: 50%;
      margin-top: -6%;
-     text-align: center
+     text-align: center;
+     cursor:pointer;
   }
   .default-tips{
     display: inline-block;
