--- a/assets/css/dev/themes/default/_common.less
+++ b/assets/css/dev/themes/default/_common.less
@@ -280,6 +280,13 @@
     display: none;
   }
 
+  .username:hover:before{
+    content:'点击可体验账号';
+  }
+  .password:hover:before{
+    content:'点击可复制体验账号密码';
+  }
+
   .no-scrollbar('html');
   .no-scrollbar(div);
 
