--- a/assets/css/dev/themes/default/_common.less
+++ b/assets/css/dev/themes/default/_common.less
@@ -281,7 +281,7 @@
   }
 
   .username:hover:before{
-    content:'点击可体验账号';
+    content:'点击可复制体验账号';
   }
   .password:hover:before{
     content:'点击可复制体验账号密码';
